--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.0",
+    "mongoose-paginate-v2": "^1.9.1",
     "node-cron": "^3.0.2",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^4.6.3",
-    "helmet": "^7.0.0",
-    "compression": "^1.7.4"
+    "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
     "jest": "^29.5.0",
